compleate nabar and header main layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <title>Responsive-website mobile & desktop with media query</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+<body class="inter-font">
+    <header class="bg-color-header">
+            <nav class="navbar display-flex">
+                    <h3 class="brand">Fitness</h3>
+                   <ul class="nav-links display-flex">
+                    <li class="nav-item"><a href="" class="nav-link"> <button class="nav-btn">Home</button> </a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Service</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                   </ul>
+            </nav>
+            <div class="banner">
+                <div class="banner-text">
+                    <h1 class="banner-title">Get body in shape & stay healthy</h1>
+                <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <button class="btn-primary">Join Club Now!</button>
+                <button class="download-btn">Download App</button>
+                </div>
+                <div class="banner-img">
+                    <img src="images/Images 2.png" alt="">
+                </div>
+            </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
