header section added card style

--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
             </nav>
             <div class="banner">
                 <div class="banner-text">
-                    <h1 class="banner-title">Get body in shape & stay healthy</h1>
-                <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <h1 class="banner-title"> <span class="top-line">Get body in</span> <br> <span class="bonheur-royale-regular">shape</span> & stay <br> <span class="bottom-line">healthy</span> </h1>
+                <p class="banner-description">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
                 <button class="btn-primary">Join Club Now!</button>
                 <button class="download-btn">Download App</button>
                 </div>
                 <div class="banner-img">
                     <img src="images/Images 2.png" alt="">
+                </div>
+                <div class="card">
+                    <h3 class="card-top-title">500+</h3>
+                    <p class="card-top-description">Free Workout Videos</p>
+                </div>
+                <div class="card2">
+                    <h3 class="card-title">350+</h3>
+                    <p class="card-description">Video tutorial</p>  
                 </div>
             </div>
     </header>
