--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Responsive-website mobile & desktop with media query</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body class="inter-font">
-    <header class="bg-color-header">
+<body class="inter-font bg-color-header">
+    <header>
             <nav class="navbar display-flex">
                     <h3 class="brand">Fitness</h3>
                    <ul class="nav-links display-flex">
@@ -19,10 +19,10 @@
             </nav>
             <div class="banner">
                 <div class="banner-text">
-                    <h1 class="banner-title"> <span class="top-line">Get body in</span> <br> <span class="bonheur-royale-regular">shape</span> & stay <br> <span class="bottom-line">healthy</span> </h1>
-                <p class="banner-description">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
-                <button class="btn-primary">Join Club Now!</button>
-                <button class="download-btn">Download App</button>
+                     <h1 class="banner-title"> <span class="top-line">Get body in</span> <br> <span class="bonheur-royale-regular">shape</span> & stay <br> <span class="bottom-line">healthy</span> </h1>
+                     <p class="banner-description">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
+                     <button class="btn-primary">Join Club Now!</button>
+                     <button class="download-btn">Download App</button>
                 </div>
                 <div class="banner-img">
                     <img src="images/Images 2.png" alt="">
@@ -32,12 +32,45 @@
                     <p class="card-top-description">Free Workout Videos</p>
                 </div>
                 <div class="card2">
-                    <h3 class="card-title">350+</h3>
-                    <p class="card-description">Video tutorial</p>  
+                    <div>
+                        <button class="circle"></button>
+                    </div>
+                    <div>
+                        <h3 class="card-title">350+</h3>
+                        <p class="card-description">Video tutorial</p>  
+                    </div>
                 </div>
             </div>
     </header>
     <main>
+        <section>
+            <div class="main-section">
+                <h3 class="main-title">Change Your Habits</h3>
+                <p class="main-description shared-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+            <div class="img-section">
+                <div class="share-position">
+                    <img class="circle-img" src="images/image 3.png" alt="">
+                    <h4 class="shared-title">Movement</h4>
+                    <p class="shared-description">We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="share-position">
+                    <img class="circle-img" src="images/image 2.png" alt="">
+                    <h4 class="shared-title">Time</h4>
+                    <p class="shared-description">We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="share-position">
+                    <img class="circle-img" src="images/image 4.png" alt="">
+                    <h4 class="shared-title">Practice</h4>
+                    <p class="shared-description">We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="share-position">
+                    <img class="circle-img" src="images/image 5.png" alt="">
+                    <h4 class="shared-title">Weight Loss</h4>
+                    <p class="shared-description">We believe fitness should be <br> accessible to everyone</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
