added advertise card style

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                 </div>
             </div>
         </section>
+        <section class="advertise">
+            <div class="advertise-card">
+                <h3 class="main-title advertise-title">Run an Extra <br> Mile Easily</h3>
+                <p class="shared-description advertise-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <button class="btn-primary advertise-btn">Join Now</button>
+            </div>
+            <div>
+                <img class="advertise-img" src="images/run.jpg" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
