added footer section layout

--- a/index.html
+++ b/index.html
@@ -72,19 +72,96 @@
             </div>
         </section>
         <section class="advertise">
-            <div class="advertise-card">
-                <h3 class="main-title advertise-title">Run an Extra <br> Mile Easily</h3>
-                <p class="shared-description advertise-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
-                <button class="btn-primary advertise-btn">Join Now</button>
+           <div class="part-container advertise-container">
+            <div class="advertise-flex">
+                <div class="advertise-card">
+                    <h3 class="main-title advertise-title">Run an Extra <br> Mile Easily</h3>
+                    <p class="shared-description advertise-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <button class="btn-primary advertise-btn">Join Now</button>
+                </div>
+                <div>
+                    <img class="advertise-img" src="images/run.jpg" alt="">
+                </div>
             </div>
-            <div>
-                <img class="advertise-img" src="images/run.jpg" alt="">
+           </div>
+        </section>
+        <section id="team-part">
+            <div class="child-div part-container">
+                <div class="team-title-description">
+                    <h3>Meet Our Team</h3>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div class="team-section">
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer1.png" alt="">
+                        <h3 >Jerome Bell</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer2.png" alt="">
+                        <h3 class="shared-title">Cameron Williamson</h3>
+                        <p class="shared-description">Trainer</p>
+                    </div>
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer3.png" alt="">
+                        <h3>Darrell Steward</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer4.png" alt="">
+                        <h3>Dianne Russell</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer5.png" alt="">
+                        <h3>Cody Fisher</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="team-img">
+                        <img class="img-container" src="images/trainer6.png" alt="">
+                        <h3>Theresa Webb</h3>
+                        <p>Trainer</p>
+                    </div>
+                </div> 
             </div>
+         
         </section>
 
     </main>
-    <footer>
-
+    <footer class="margin-top">
+        <div class="part-container">
+            <div class="sub-container">
+                <div class="footer-title-descriptin">
+                    <h3 class="footer-brand">Fitness</h3>
+                    <p class="footer-description shared-description">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div>
+                <div class="list-section">
+                    <div class="list-left">
+                        <h4 class="list-title">Get Started</h4>
+                        <ul class="ul-item">
+                        <li class="li-item"><a href="">Service</a></li>
+                        <li class="li-item"><a href="">Contact Us</a></li>
+                        <li class="li-item"><a href="">Affiliate Program</a></li>
+                        <li class="li-item margin-none"><a href="">About Us</a></li>
+                    </ul>
+                    </div>
+                    <div class="list-left list-right">
+                        <h4 class="list-title">Get Started</h4>
+                        <ul class="ul-item">
+                            <li class="li-item"><a href="">Fitness</a></li>
+                            <li class="li-item"><a href="">Platform</a></li>
+                            <li class="li-item"><a href="">Workout Libary</a></li>
+                            <li  class="li-item margin-none"><a href="">App Design</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="line">  
+            </div>
+            <div class="all-right">
+                <p>All right reserved @Fitness 2024</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
