table and bmi chart added

--- a/index.html
+++ b/index.html
@@ -85,11 +85,97 @@
             </div>
            </div>
         </section>
+        <section class="form-list-container">
+            <div class="bmi-form part-container">
+                <div class="table-title">
+                    <h4 class="title-heading">BMI Calculator Chart</h4>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="form-section">
+                    <div class="form-title-description">
+                        <h4 class="form-title">Calculate your BMI</h4>
+                        <p class="form-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                    </div>
+                    <form action="#" class="form">
+                        <div class="input-field">
+                            <div class="first-row" >
+                                <div class="input-1" >
+                                    <input type="text" placeholder="Height/cm">
+                                </div> 
+                                <div class="input-2">
+                                    <input type="text" placeholder="Height/cm">
+                                </div> 
+                            </div>
+                            <div class="first-row" >
+                                <div class="input-1" >
+                                    <input type="text" placeholder="Height/cm">
+                                </div> 
+                                <div class="input-2">
+                                    <input type="text" placeholder="Height/cm">
+                                </div> 
+                            </div>
+                            <<div class="select">
+                                <select class="input-box">
+                                    <option>Select an activity factor</option>
+                                </select>
+                            </div> 
+
+
+                            <!-- <div class="input-middle" >
+                                    <div class="input-3">
+                                        <input class="input-box" type="text" placeholder="Weight/kg">
+                                </div> 
+                                <div class="input-4">
+                                    <select class="input-box">
+                                        <option>sex</option>
+                                        <option>male</option>
+                                        <option>female</option>
+                                    </select>
+                                </div> 
+                            </div> -->
+                            <!-- <div class="box" id="box-3"><input class="input-box" type="text" placeholder="Age"></div> -->
+                            <!-- <div class="box" id="box-4">
+                                
+                            </div> -->
+                           
+                        </div>
+                        <div class="form-button">
+                            <button class="btn-primary">Calculate</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
         <section id="team-part">
             <div class="child-div part-container">
                 <div class="team-title-description">
-                    <h3>Meet Our Team</h3>
-                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                    <h3 class="main-title">Meet Our Team</h3>
+                    <p class="shared-description">We believe fitness should be accessible to everyone, everywhere,<br> regardless of income or access to a gym.</p>
                 </div>
                 <div class="team-section">
                     <div class="team-img">
